# cyber-edit

./: CMakeLists.txt  README.md  cyber-edit.desktop  install.sh
src/: aboutbox.cpp  aboutbox.h  executecommand.cpp  executecommand.h  fileoperations.cpp  fileoperations.h  main.cpp
src/qml/: main.qml
translations/: en_US.ts  hi_IN.ts  id_ID.ts  pl_PL.ts  ru_RU.ts  tr_TR.ts  uk_UA.ts
